[gd_scene load_steps=3 format=3 uid="uid://dqyi0la612cb7"]

[ext_resource type="Script" uid="uid://chby60n8rlv1s" path="res://ui.gd" id="1_fyqef"]
[ext_resource type="Texture2D" uid="uid://drikmj7lppayo" path="res://Resources/hud_heart.svg" id="2_m6e0p"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_fyqef")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -64.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 25

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="HeartOne" type="TextureRect" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_m6e0p")

[node name="HeartTwo" type="TextureRect" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_m6e0p")

[node name="HeartThree" type="TextureRect" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_m6e0p")
